force-app/main/default/objects/Contract__c/fields/PA_Year_end_reporting__c.field-meta.xml
<CustomField>
    <fullName>PA_Year_end_reporting__c</fullName>
    <defaultValue>&quot;Hourly Rate&quot;</defaultValue>
    <description>Price Agreement Year end reporting</description>
    <inlineHelpText>Agreed upon delivery model for Year end reporting</inlineHelpText>
    <label>PA - Year end reporting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
            <value>
                <fullName>Hourly Rate</fullName>
            </value>
            <value>
                <fullName>Unit Price</fullName>
                <isActive>false</isActive>
                <label>Unit Price</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>