force-app/main/default/objects/Contract__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <inlineHelpText>Betalingsmetode</inlineHelpText>
    <label>Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Avtalegiro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>