force-app/main/default/objects/Contract__c/fields/Payroll_System__c.field-meta.xml
<CustomField>
    <fullName>Payroll_System__c</fullName>
    <label>Payroll System</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aditro</fullName>
            </value>
            <value>
                <fullName>Fortnox</fullName>
            </value>
            <value>
                <fullName>Hogia</fullName>
            </value>
            <value>
                <fullName>Integrated in ERP system</fullName>
                <isActive>false</isActive>
                <label>Integrated in ERP system</label>
            </value>
            <value>
                <fullName>SD Works</fullName>
            </value>
            <value>
                <fullName>Tripletex</fullName>
            </value>
            <value>
                <fullName>Xledger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>