force-app/main/default/objects/Contract__c/fields/Payroll_System_License_Owner__c.field-meta.xml
<CustomField>
    <fullName>Payroll_System_License_Owner__c</fullName>
    <label>Payroll System License Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VIEW</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>