force-app/main/default/objects/Contract__c/fields/PayrollDate__c.field-meta.xml
<CustomField>
    <fullName>PayrollDate__c</fullName>
    <defaultValue>DATE(YEAR(TODAY()),1,15)</defaultValue>
    <label>Payroll Date</label>
    <type>Date</type>
</CustomField>