force-app/main/default/objects/Contract__c/fields/PayrollOfficer__c.field-meta.xml
<CustomField>
    <fullName>PayrollOfficer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payroll Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts4</relationshipName>
    <type>Lookup</type>
</CustomField>