force-app/main/default/objects/Contract__c/fields/Price_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Price_Agreement__c</fullName>
    <inlineHelpText>Avtaletype</inlineHelpText>
    <label>Price Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unit Price</fullName>
            </value>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
            <value>
                <fullName>Hourly Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>