force-app/main/default/objects/Contract__c/fields/Pricelist_Hours__c.field-meta.xml
<CustomField>
    <fullName>Pricelist_Hours__c</fullName>
    <label>Price List (Hours)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_Group__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Std timmar</fullName>
            </value>
            <value>
                <fullName>Timer Kristiansand</fullName>
            </value>
            <value>
                <fullName>Timer Kristiansand Pluss</fullName>
            </value>
            <value>
                <fullName>Timer Lillehammer</fullName>
            </value>
            <value>
                <fullName>Timer Standard</fullName>
            </value>
            <value>
                <fullName>Timer Søgne</fullName>
            </value>
            <value>
                <fullName>Timer Tripletex Fastpris</fullName>
            </value>
            <value>
                <fullName>Timer Tripletex Standard</fullName>
            </value>
            <value>
                <fullName>Timer Tripletex Stavanger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>