force-app/main/default/objects/Contract__c/fields/Pricelist_System__c.field-meta.xml
<CustomField>
    <fullName>Pricelist_System__c</fullName>
    <label>Price List (System)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_Group__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Manuell</fullName>
            </value>
            <value>
                <fullName>2 Charity</fullName>
            </value>
            <value>
                <fullName>S2F Charity - Stykkpris</fullName>
            </value>
            <value>
                <fullName>3F Systemkunde Charity</fullName>
            </value>
            <value>
                <fullName>1 Mini</fullName>
            </value>
            <value>
                <fullName>S1 Mini - Stykkpris</fullName>
            </value>
            <value>
                <fullName>2 Flex</fullName>
            </value>
            <value>
                <fullName>S2 Flex Stykkpris</fullName>
            </value>
            <value>
                <fullName>3 Flex</fullName>
            </value>
            <value>
                <fullName>2+ Premium</fullName>
            </value>
            <value>
                <fullName>S2+ Premium - Stykkpris</fullName>
            </value>
            <value>
                <fullName>3+ Systemkunde - Premium</fullName>
            </value>
            <value>
                <fullName>S2X Premium Xtra - Stykkpris</fullName>
            </value>
            <value>
                <fullName>3X Premium Xtra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>