force-app/main/default/objects/Contract__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Other Integration</fullName>
            </value>
            <value>
                <fullName>VIEW AI Propell</fullName>
            </value>
            <value>
                <fullName>VIEW AI Semine</fullName>
            </value>
            <value>
                <fullName>VIEW Board Control</fullName>
            </value>
            <value>
                <fullName>VIEW Connect Integration</fullName>
            </value>
            <value>
                <fullName>VIEW Expense</fullName>
            </value>
            <value>
                <fullName>VIEW Insera</fullName>
            </value>
            <value>
                <fullName>VIEW SA 100 Platinum</fullName>
            </value>
            <value>
                <fullName>VIEW SA 200 Gold</fullName>
            </value>
            <value>
                <fullName>VIEW SA 300 Silver</fullName>
            </value>
            <value>
                <fullName>VIEW SA 400 Basic</fullName>
            </value>
            <value>
                <fullName>VIEW SiteSmart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>