force-app/main/default/objects/Contract__c/fields/RemitForCustomer__c.field-meta.xml
<CustomField>
    <fullName>RemitForCustomer__c</fullName>
    <label>Remit for Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>