force-app/main/default/objects/Contract__c/fields/ReportingDate__c.field-meta.xml
<CustomField>
    <fullName>ReportingDate__c</fullName>
    <defaultValue>DATE(YEAR(TODAY()),1,30)</defaultValue>
    <label>Reporting Date</label>
    <type>Date</type>
</CustomField>