force-app/main/default/objects/Contract__c/fields/ReportingFrequency__c.field-meta.xml
<CustomField>
    <fullName>ReportingFrequency__c</fullName>
    <defaultValue>&apos;Bi-monthly&apos;</defaultValue>
    <label>Reporting Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-monthly</fullName>
                <default>true</default>
                <label>Bi-monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Biannual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Tertial</fullName>
            </value>
            <value>
                <fullName>Interim</fullName>
                <isActive>false</isActive>
                <label>Interim</label>
            </value>
            <value>
                <fullName>Two-monthly</fullName>
                <isActive>false</isActive>
                <label>Two-monthly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>