force-app/main/default/objects/Contract__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <inlineHelpText>Test</inlineHelpText>
    <label>Scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Delivery__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Templates</valueSetName>
    </valueSet>
</CustomField>