force-app/main/default/objects/Contract__c/fields/SharepointLink__c.field-meta.xml
<CustomField>
    <fullName>SharepointLink__c</fullName>
    <formula>IF( NOT (ISBLANK (Account__r.SharepoinLink__c)) , (HYPERLINK(Account__r.SharepoinLink__c, &quot;Åpne kunderom&quot;, &quot;_blank&quot;)), &quot;Kunderom ikke opprettet&quot;)</formula>
    <label>Sharepoint Link</label>
    <type>Text</type>
</CustomField>