force-app/main/default/objects/Contract__c/fields/Skip_Automations__c.field-meta.xml
<CustomField>
    <fullName>Skip_Automations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created to optimize new account screen flow</description>
    <label>Skip Automations</label>
    <type>Checkbox</type>
</CustomField>