force-app/main/default/objects/Contract__c/fields/SpecialTerms__c.field-meta.xml
<CustomField>
    <fullName>SpecialTerms__c</fullName>
    <inlineHelpText>If VIEW Contract Deviated, fill out Special Terms</inlineHelpText>
    <label>Special Terms</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>