force-app/main/default/objects/Contract__c/fields/Start_date2__c.field-meta.xml
<CustomField>
    <fullName>Start_date2__c</fullName>
    <label>Start date</label>
    <type>Date</type>
</CustomField>