force-app/main/default/objects/Contract__c/fields/Support_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Support_Agreement__c</fullName>
    <label>Support Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100 Platinum</fullName>
            </value>
            <value>
                <fullName>200 Gold</fullName>
            </value>
            <value>
                <fullName>300 Silver</fullName>
            </value>
            <value>
                <fullName>400 Basic</fullName>
            </value>
            <value>
                <fullName>500 No Support</fullName>
                <label>500 No Support Agreement</label>
            </value>
            <value>
                <fullName>600 Fixed price (15 minutes)</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>