force-app/main/default/objects/Contract__c/fields/XGL__c.field-meta.xml
<CustomField>
    <fullName>XGL__c</fullName>
    <label>XGL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2013 -9105 - 2013 Nysalg Netledger Maritime Accounting AS</fullName>
                <isActive>false</isActive>
                <label>2013 -9105 - 2013 Nysalg Netledger Maritime Accounting AS</label>
            </value>
            <value>
                <fullName>2014-9008 - 2014 Nysalg Netledger Bergen</fullName>
                <isActive>false</isActive>
                <label>2014-9008 - 2014 Nysalg Netledger Bergen</label>
            </value>
            <value>
                <fullName>2014-9009 - 2014 Nysalg Netledger Romerike</fullName>
                <isActive>false</isActive>
                <label>2014-9009 - 2014 Nysalg Netledger Romerike</label>
            </value>
            <value>
                <fullName>2014-9012 - 2014 Nysalg Netlegder Haugaland</fullName>
                <isActive>false</isActive>
                <label>2014-9012 - 2014 Nysalg Netlegder Haugaland</label>
            </value>
            <value>
                <fullName>2014-9016 - 2014 Nysalg Netledger Lillehammer</fullName>
                <isActive>false</isActive>
                <label>2014-9016 - 2014 Nysalg Netledger Lillehammer</label>
            </value>
            <value>
                <fullName>2014-9100 - 2014 Nysalg Netledger Oslo</fullName>
                <isActive>false</isActive>
                <label>2014-9100 - 2014 Nysalg Netledger Oslo</label>
            </value>
            <value>
                <fullName>2014-9101 - 2014 Nysalg Netledger Ålesund AS</fullName>
                <isActive>false</isActive>
                <label>2014-9101 - 2014 Nysalg Netledger Ålesund AS</label>
            </value>
            <value>
                <fullName>2014-9103 - 2014 Nysalg NetLedger Drammen AS</fullName>
                <isActive>false</isActive>
                <label>2014-9103 - 2014 Nysalg NetLedger Drammen AS</label>
            </value>
            <value>
                <fullName>2014-9105 - 2014 Nysalg Netledger Maritime Accounting AS</fullName>
                <isActive>false</isActive>
                <label>2014-9105 - 2014 Nysalg Netledger Maritime Accounting AS</label>
            </value>
            <value>
                <fullName>2014-9106 - 2014 Nysalg Netledger Proøk AS</fullName>
                <isActive>false</isActive>
                <label>2014-9106 - 2014 Nysalg Netledger Proøk AS</label>
            </value>
            <value>
                <fullName>2015-9008 - 2015 Nysalg Netledger Bergen</fullName>
                <isActive>false</isActive>
                <label>2015-9008 - 2015 Nysalg Netledger Bergen</label>
            </value>
            <value>
                <fullName>2015-9009 - 2015 Nysalg Netledger Romerike</fullName>
                <isActive>false</isActive>
                <label>2015-9009 - 2015 Nysalg Netledger Romerike</label>
            </value>
            <value>
                <fullName>2015-9012 - 2015 Nysalg Netlegder Haugaland</fullName>
                <isActive>false</isActive>
                <label>2015-9012 - 2015 Nysalg Netlegder Haugaland</label>
            </value>
            <value>
                <fullName>2015-9013 - 2015 Nysalg Netledger Hardanger</fullName>
                <isActive>false</isActive>
                <label>2015-9013 - 2015 Nysalg Netledger Hardanger</label>
            </value>
            <value>
                <fullName>2015-9016 - 2015 Nysalg Netledger Lillehammer</fullName>
                <isActive>false</isActive>
                <label>2015-9016 - 2015 Nysalg Netledger Lillehammer</label>
            </value>
            <value>
                <fullName>2015-9100 - 2015 Nysalg Netledger Oslo</fullName>
                <isActive>false</isActive>
                <label>2015-9100 - 2015 Nysalg Netledger Oslo</label>
            </value>
            <value>
                <fullName>2015-9101 - 2015 Nysalg Netledger Ålesund AS</fullName>
                <isActive>false</isActive>
                <label>2015-9101 - 2015 Nysalg Netledger Ålesund AS</label>
            </value>
            <value>
                <fullName>2015-9105 - 2015 Nysalg Netledger Maritime Accounting AS</fullName>
                <isActive>false</isActive>
                <label>2015-9105 - 2015 Nysalg Netledger Maritime Accounting AS</label>
            </value>
            <value>
                <fullName>2015-9106 - 2015 Nysalg Netledger Proøk AS</fullName>
                <isActive>false</isActive>
                <label>2015-9106 - 2015 Nysalg Netledger Proøk AS</label>
            </value>
            <value>
                <fullName>2016-9008 - 2016 Nysalgs VIEW Ledger Bergen</fullName>
                <isActive>false</isActive>
                <label>2016-9008 - 2016 Nysalgs VIEW Ledger Bergen</label>
            </value>
            <value>
                <fullName>2016-9009 - 2016 Nysalg VIEW Ledger Romerike</fullName>
                <isActive>false</isActive>
                <label>2016-9009 - 2016 Nysalg VIEW Ledger Romerike</label>
            </value>
            <value>
                <fullName>2016-9012 - 2016 Nysalg VIEW Ledger Haugaland</fullName>
                <isActive>false</isActive>
                <label>2016-9012 - 2016 Nysalg VIEW Ledger Haugaland</label>
            </value>
            <value>
                <fullName>2016-9016 - 2016 Nysalg VIEW Ledger Lillehammer</fullName>
                <isActive>false</isActive>
                <label>2016-9016 - 2016 Nysalg VIEW Ledger Lillehammer</label>
            </value>
            <value>
                <fullName>2016-9017 - 2016 Nysalg VIEW Ledger Stavanger</fullName>
                <isActive>false</isActive>
                <label>2016-9017 - 2016 Nysalg VIEW Ledger Stavanger</label>
            </value>
            <value>
                <fullName>2016-9100 - 2016 Nysalg VIEW Ledger Oslo</fullName>
                <isActive>false</isActive>
                <label>2016-9100 - 2016 Nysalg VIEW Ledger Oslo</label>
            </value>
            <value>
                <fullName>2016-9101 - 2016 Nysalg VIEW Ledger Ålesund</fullName>
                <isActive>false</isActive>
                <label>2016-9101 - 2016 Nysalg VIEW Ledger Ålesund</label>
            </value>
            <value>
                <fullName>2016-9105 - 2016 Nysalg VIEW Maritime AS</fullName>
                <isActive>false</isActive>
                <label>2016-9105 - 2016 Nysalg VIEW Maritime AS</label>
            </value>
            <value>
                <fullName>2016-9106 - 2016 Nysalg Netledger Proøk AS</fullName>
                <isActive>false</isActive>
                <label>2016-9106 - 2016 Nysalg Netledger Proøk AS</label>
            </value>
            <value>
                <fullName>2016-9118 - 2016 Nysalg VIEW Tax AS</fullName>
                <isActive>false</isActive>
                <label>2016-9118 - 2016 Nysalg VIEW Tax AS</label>
            </value>
            <value>
                <fullName>2017-9008 - 2017 Nysalg VIEW Ledger Bergen</fullName>
                <isActive>false</isActive>
                <label>2017-9008 - 2017 Nysalg VIEW Ledger Bergen</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>