force-app/main/default/objects/Contract__c/fields/Year_end_reporting_date__c.field-meta.xml
<CustomField>
    <fullName>Year_end_reporting_date__c</fullName>
    <label>Year end reporting date</label>
    <type>Date</type>
</CustomField>