force-app/main/default/objects/Contract__c/validationRules/Account_is_Deactivated.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_is_Deactivated</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Account__r.ApprovalStatus__c, &quot;Rejected&quot;)</errorConditionFormula>
    <errorMessage>Account is deactivated, contact hvitvaskingsansvarlig.</errorMessage>
</ValidationRule>