force-app/main/default/objects/Contract__c/validationRules/Billing_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Account</fullName>
    <active>true</active>
    <errorConditionFormula>Billing_Account__c = Account__c</errorConditionFormula>
    <errorMessage>Billing Account cannot be the same as Account</errorMessage>
</ValidationRule>