force-app/main/default/objects/Contract__c/validationRules/Invoice_email_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_email_mandatory</fullName>
    <active>true</active>
    <description>Invoice email is mandatory if invoice method is email</description>
    <errorConditionFormula>AND((ISPICKVAL(Invoice_Delivery_Method__c , &quot;Email&quot;)),
ISBLANK( Invoice_Email__c ), NOT(ISPICKVAL( Status__c , &quot;Draft&quot;))
)</errorConditionFormula>
    <errorDisplayField>Invoice_Email__c</errorDisplayField>
    <errorMessage>Invoice email is mandatory if invoice method is email</errorMessage>
</ValidationRule>