force-app/main/default/objects/Contract__c/validationRules/Must_Not_Skip_Status_Steps.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Not_Skip_Status_Steps</fullName>
    <active>true</active>
    <description>An Agreement must be created with the Draft status and go through each step. No steps can be skipped,</description>
    <errorConditionFormula>(ISNEW() &amp;&amp; NOT(ISPICKVAL(Status__c, &apos;Draft&apos;))) || (
NOT(ISPICKVAL(Status__c, &quot;Updated&quot;)) &amp;&amp; ISCHANGED(Status__c) &amp;&amp;
(
(ISBLANK(TEXT(PRIORVALUE(Status__c))) &amp;&amp; NOT(ISPICKVAL(Status__c, &apos;Draft&apos;))) || 
(ISPICKVAL(PRIORVALUE(Status__c), &apos;Draft&apos;) &amp;&amp; (NOT(ISPICKVAL(Status__c, &apos;Sent&apos;)) &amp;&amp; NOT(ISBLANK(TEXT(Status__c))))) || 
(ISPICKVAL(PRIORVALUE(Status__c), &apos;Sent&apos;) &amp;&amp; (NOT(ISPICKVAL(Status__c, &apos;Signed&apos;)) &amp;&amp; NOT(ISPICKVAL(Status__c, &apos;Draft&apos;)))) || 
(ISPICKVAL(PRIORVALUE(Status__c), &apos;Signed&apos;) &amp;&amp; NOT(ISPICKVAL(Status__c, &apos;Sent&apos;)))))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status cannot be skipped. Ensure that all previous statuses are used first.
Draft, Sent then Signed</errorMessage>
</ValidationRule>