force-app/main/default/objects/Contract__c/validationRules/PayrollDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>PayrollDateValidation</fullName>
    <active>false</active>
    <description>Month of Payroll Date has to be same as month of Fiscal Year Start.</description>
    <errorConditionFormula>IF(AND(NOT(ISBLANK(PayrollDate__c)), NOT(ISBLANK( FiscalYearStart__c ))), IF(MONTH(PayrollDate__c)!= MONTH(FiscalYearStart__c), true, false) , false)</errorConditionFormula>
    <errorMessage>Month of Payroll Date has to be same as month of Fiscal Year Start.</errorMessage>
</ValidationRule>