force-app/main/default/objects/Contract__c/validationRules/ReportingDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ReportingDateValidation</fullName>
    <active>false</active>
    <description>Month of Reporting Date has to be same as month of Fiscal Year Start.</description>
    <errorConditionFormula>IF(AND(NOT(ISBLANK( ReportingDate__c )), NOT(ISBLANK( FiscalYearStart__c ))), IF(MONTH(ReportingDate__c)!= MONTH(FiscalYearStart__c), true, false) , false)</errorConditionFormula>
    <errorMessage>Month of Reporting Date has to be same as month of Fiscal Year Start.</errorMessage>
</ValidationRule>