force-app/main/default/objects/Contract__c/validationRules/Validate_Operational_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Operational_Project</fullName>
    <active>false</active>
    <errorConditionFormula>RecordType.Name = &quot;Operational&quot;
&amp;&amp;
ISPICKVAL(Status__c, &quot;Signed&quot;) 
&amp;&amp;
ISBLANK(Account__r.Project_Number_Operational__c)</errorConditionFormula>
    <errorMessage>You have to create a Project of type operational first.</errorMessage>
</ValidationRule>