force-app/main/default/objects/Contract__c/listViews/All_kontrakts.listView-meta.xml
<ListView>
    <fullName>All_kontrakts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_Owner_KA__c</columns>
    <columns>Assignment_Responsible__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>Business_Area__c</columns>
    <columns>ContractSignatureDate__c</columns>
    <columns>StartDate__c</columns>
    <columns>Cost_Centre__c</columns>
    <filterScope>Everything</filterScope>
    <label>All agreements</label>
</ListView>