force-app/main/default/objects/Contract__c/listViews/All_my_kontrakts.listView-meta.xml
<ListView>
    <fullName>All_my_kontrakts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_Owner_KA__c</columns>
    <columns>Assignment_Responsible__c</columns>
    <columns>Country__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>XGL__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract__c.Operational</value>
    </filters>
    <filters>
        <field>ContractEndDate__c</field>
        <operation>equals</operation>
    </filters>
    <label>All my agreements</label>
</ListView>