force-app/main/default/objects/Contract__c/listViews/My_Implementation_kontrakts.listView-meta.xml
<ListView>
    <fullName>My_Implementation_kontrakts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_Owner_KA__c</columns>
    <columns>Assignment_Responsible__c</columns>
    <columns>Country__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract__c.Implementation</value>
    </filters>
    <filters>
        <field>ContractEndDate__c</field>
        <operation>equals</operation>
    </filters>
    <label>My Implementation agreements</label>
</ListView>